--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^10.0.0",
     "prettier": "^3.8.1",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.6.3"
   }
 }
