--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,10 @@
     "rootDir": "src",
     "outDir": "dist",
     "strict": true,
+    "jsx": "react-jsx",
     "noImplicitAny": true,
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "include": ["src"]
+  "include": ["src/**/*"]
 }
